; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_dtls_mtu_test.c_clnt_psk_callback.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_dtls_mtu_test.c_clnt_psk_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"psk\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i32, i8*, i32)* @clnt_psk_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clnt_psk_callback(i32* %0, i8* %1, i8* %2, i32 %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load i8*, i8** %9, align 8
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @BIO_snprintf(i8* %13, i32 %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* %12, align 4
  %17 = icmp ugt i32 %16, 20
  br i1 %17, label %18, label %19

18:                                               ; preds = %6
  store i32 20, i32* %12, align 4
  br label %19

19:                                               ; preds = %18, %6
  %20 = load i8*, i8** %11, align 8
  %21 = load i32, i32* %12, align 4
  %22 = call i32 @memset(i8* %20, i32 90, i32 %21)
  %23 = load i32, i32* %12, align 4
  ret i32 %23
}

declare dso_local i32 @BIO_snprintf(i8*, i32, i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
